# CoupleFuzz

./: .gitignore  README.md
evaluation/RQ1/bsdcpio-1/: bsdcpio-1  reproduce.md
evaluation/RQ1/bsdcpio-2/: bsdcpio-2  reproduce.md
evaluation/RQ1/dec265-1/: dec265-1  reproduce.md
evaluation/RQ1/img2sixel-1/: reproduce.md
evaluation/RQ1/img2sixel-2/: img2sixel-2  reproduce.md
evaluation/RQ1/img2sixel-3/: img2sixel-3  reproduce.md
evaluation/RQ1/img2sixel-4/: reproduce.md
evaluation/RQ1/img2sixel-5/: reproduce.md
evaluation/RQ1/img2sixel-6/: reproduce.md
evaluation/RQ1/img2sixel-7/: reproduce.md
evaluation/RQ1/img2sixel-8/: img2sixel-8  reproduce.md
evaluation/RQ1/jasper-1/: jasper-1  reproduce.md
evaluation/RQ1/mp4encrypt-1/: mp4encrypt-1
evaluation/RQ1/mp4encrypt-2/: mp4encrypt-2  reproduce.md
evaluation/RQ1/rizin-1/: reproduce.md  rizin-1
evaluation/RQ1/tiff2pdf-1/: reproduce.md  tiff2pdf-1
evaluation/RQ1/tiff2ps-1/: reproduce.md  tiff2ps-1
evaluation/RQ1/tiffcrop-1/: reproduce.md  tiffcrop-1
evaluation/RQ1/tiffcrop-2/: reproduce.md  tiffcrop-2
evaluation/RQ1/tiffcrop-3/: reproduce.md  tiffcrop-3
evaluation/RQ1/tiffcrop-4/: reproduce.md  tiffcrop-4
evaluation/RQ1/tiffcrop-5/: tiffcrop-5
evaluation/RQ1/tiffcrop-6/: reproduce.md  tiffcrop-6
evaluation/RQ1/tiffcrop-7/: reproduce.md
evaluation/RQ1/tiffcrop-8/: reproduce.md
evaluation/RQ1/tiffdither-1/: reproduce.md  tiffdither-1
evaluation/RQ2/CVE-2015-8915/: CVE-2015-8915  reproduce.md
evaluation/RQ2/CVE-2016-10095/: reproduce.md
evaluation/RQ2/CVE-2016-9398/: CVE-2016-9398  reproduce.md
evaluation/RQ2/CVE-2016-9829/: CVE-2016-9829
evaluation/RQ2/CVE-2017-11728/: CVE-2017-11728
evaluation/RQ2/CVE-2017-11729/: CVE-2017-11729
evaluation/RQ2/CVE-2017-16828/: CVE-2017-16828  reproduce.md
evaluation/RQ2/CVE-2017-16898/: CVE-2017-16898  reproduce.md
evaluation/RQ2/CVE-2017-5969/: CVE-2017-5969  reproduce.md
evaluation/RQ2/CVE-2017-7303/: CVE-2017-7303  reproduce.md
evaluation/RQ2/CVE-2017-7578/: CVE-2017-7578
evaluation/RQ2/CVE-2017-8392/: CVE-2017-8392  reproduce.md
evaluation/RQ2/CVE-2017-8393/: CVE-2017-8393  reproduce.md
evaluation/RQ2/CVE-2017-8394/: CVE-2017-8394  reproduce.md
evaluation/RQ2/CVE-2017-8395/: CVE-2017-8395  reproduce.md
evaluation/RQ2/CVE-2017-8398/: CVE-2017-8398  reproduce.md
evaluation/RQ2/CVE-2017-9988/: CVE-2019-9999
evaluation/RQ2/CVE-2018-10780/: POC  reproduce.md
evaluation/RQ2/CVE-2018-11095/: CVE-2018-11095
evaluation/RQ2/CVE-2018-11225/: CVE-2018-11225  reproduce.md
evaluation/RQ2/CVE-2018-9252/: CVE-2018-9252  reproduce.md
evaluation/RQ2/CVE-2019-12982/: CVE-2019-12982  reproduce.md
evaluation/RQ2/CVE-2019-20094/: reproduce.md
evaluation/RQ2/CVE-2020-6628/: CVE-2020-6628  reproduce.md
evaluation/RQ2/CVE-2022-2057/: CVE-2022-2057  reproduce.md
evaluation/RQ2/CVE-2022-27046/: CVE-2022-27046  reprodcue.md
evaluation/RQ3/: draw.py
fuzzer/: Makefile  README.md  afl-fuzz.c  bb_mutation.c  bb_mutation.h  build-12.sh  config.h  dispatcher.py  hashmap.c  hashmap.h  option_mutation.c  option_mutation.h  regex.c  regex.h
fuzzer/instrument/: CMakeLists.txt  Makefile  build.sh
fuzzer/instrument/src/: CMakeLists.txt  cbi.cpp
fuzzer/llvm_mode/: Makefile  afl-clang-fast.c  argv-fuzz-inl.c
fuzzer/op-modeling/: .gitignore  CMakeLists.txt  README.md  build-debug.sh  build.sh
fuzzer/op-modeling/compiler/: CMakeLists.txt  cmd.txt  op-clang-fast.c  test_clang.c
fuzzer/op-modeling/pass/: CMakeLists.txt  DataFlowSanitizer.cpp  OptionHandlingPass.cpp
fuzzer/op-modeling/runtime/: Cargo.toml
fuzzer/op-modeling/runtime/include/: tag_set.h  variable_handers.h
fuzzer/op-modeling/runtime/src/: bb_taint_set.rs  len_label.rs  lib.rs  logger.rs  tag_set.rs  tag_set_wrap.rs  variable_handers.rs  variable_handers_wrap.rs
static_parser/: ast_utils.py  div_constraint.py  div_def_trace.py  exitog.py  impactanalysis.py  opt_div_map.py  parse_option.py  parsing.sh  run_pipeline.py  utils.py
(+39 files in other folders)
