[package]
name = "runtime"
version = "1.2.2"
authors = ["sp1npx <spinpx@gmail.com>"]
edition = "2018"

[lib]
name="runtime"
crate-type = ["cdylib"] # "cdylib" "staticlib"

[dependencies]
serde="1.0"
serde_derive = "1.0"
bincode = "1.0"
libc = "0.2"
lazy_static = "1.1"
angora_common = { path = "../common" }
# itertools = "0.10.0"
rand = "0.8.3"
ctor = "0.2"
serde_json = "1.0"